--- a/css/login-styler.css
+++ b/css/login-styler.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Raleway&family=Roboto+Mono:wght@400;600&display=swap");
 
 body{
-  background-image: url('/img/background.jpg') !important;
+  background-image: url('../img/background.jpg') !important;
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
@@ -13,38 +13,24 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-.center-screen {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+.modal-sheet .modal-dialog {
+  width: 380px;
+  transition: bottom .75s ease-in-out;
 }
-
-.center-screen input {
-  padding: 20px;
-  border-radius: 10px;
-  border-bottom: 5px rgba(85, 255, 190, 1) solid;
-  width: 100%;
-  max-width: 400px;
+.modal-sheet .modal-footer {
+  padding-bottom: 2rem;
 }
-
 .small-image {
-  max-width: 200px;
-  width: 100%;
-}
-
-form {
-  border-radius: 20px;
-  border-bottom: 30px solid #55ffbe;
-  background: #667eff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  padding: 20px;
+  padding: 10px;
   max-width: 400px;
   width: 100%;
-  margin: 0 auto;
 }
 
-form .form-group {
-  margin-bottom: 15px;
+ .modal-body {
+  background-color: rgb(0, 14, 76);
 }
+.rodape {
+  margin-top: 50%;
+}
+
+
