--- a/css/menu-geral.css
+++ b/css/menu-geral.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url('/img/background.jpg') !important;
+  background-image: url('../img/background.jpg') !important;
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
@@ -54,22 +54,39 @@ body{
     padding: 8px 16px;
   }
 
-footer{
-  padding-top:20px ;
-  width: auto;
-  background-color: #aad0f7;
-}
+
 .container .table .table-responsive{
   width: 100%;
 }
-.container .table .btn-edit,.btn-save,
-.btn-cancel, .btn-delete{
+
+.container .table .btn-edit, .btn-save{
   border: none;
-  padding-right: 10px;
-  padding-left: 10px;
+  border-radius: 10px;
+  padding-right: 12px;
+  padding-left: 12px;
   color: white;
-  background-color: rgb(165, 0, 0);
+  background-color: rgb(0, 81, 255);
   outline: none;
   
 }
+.container .table
+.btn-cancel, .btn-delete{
+  border: none;
+  border-radius: 10px;
+  padding-right: 12px;
+  padding-left: 12px;
+  color: white;
+  background-color: rgb(255, 0, 0);
+  outline: none;
   
+}
+
+ .rodape {
+  margin-top: 50%;
+}
+.btn-edit, .btn-save, .btn-cancel, .btn-delete {
+  font-size: 14px;
+  padding: 8px 12px;
+  /* Adicione outras propriedades de estilo conforme necessário */
+}
+
